--- a/Portfolio Website/index.html
+++ b/Portfolio Website/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Portfolio Website Template</title>
+	<title>Dylan Ray Dev</title>
 	<!-- Link to Bootstrap CSS -->
 	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
 	<!-- Link to custom CSS -->
@@ -22,7 +22,7 @@
 							<a class="nav-link" href="about.html">About</a>
 						</li>
 						<li class="nav-item">
-							<a class="nav-link" href="index.html#projects">Projects</a>
+							<a class="nav-link" href="#projects">Projects</a>
 						</li>						
 						<li class="nav-item">
 							<a class="nav-link" href="#contact">Contact</a>
